package protoFile.guild.GetCorpsMemberOrAppliListInfo;
message GetCorpsMemberOrAppliListInfoRequest{
     required int32 id=1;//角色id
     required int32 getType = 2;//0获取军团成员列表1按条件查找军团成员2获取申请列表3按条件查找申请成员
     optional string searchCriteria = 3;//搜索条件
     optional int32 curPage=4;
}
message GetCorpsMemberOrAppliListInfoResponse{
     required bool result = 1;
     optional string message = 2;
     optional MemberOrAppliListInfo data = 3;
}
message MemberOrAppliListInfo{
     repeated MemberOrAppliListBaseInfo memberOrAppliListBaseInfo=1;
     optional int32 setType = 2;//0获取军团成员列表1按条件查找军团成员2获取申请列表3按条件查找申请成员
     optional int32 curPage=3;
     optional int32 maxPage=4;
}
message MemberOrAppliListBaseInfo{
     optional int32 memberliId = 1;//申请列表id
     optional string memberName = 2;//名称
     optional int32 memberLevel = 3;//等级
     optional string memberProfession = 4;//职业
     optional string memberRank=5;//军衔
     optional string memberTime = 6;//申请时间 
     optional int32  memberContribution = 7;//贡献
}