package protoFile.vip.ChongzhiMessage_3801;
message ChongzhiMessage{//³äÖµÏûÏ¢
}